idcat/namespace-idcat.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: idcat
  annotations:
    argocd.argoproj.io/sync-options: PruneLast=true
    noa.re/deploy-id: e6209202bed8d612
