idcat/deployment-idcat-noa-re.yaml
# Source: idcat.noa.re
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idcat-noa-re
  labels:
    app: idcat-noa-re
  namespace: idcat
  annotations:
    noa.re/deploy-id: e403cbd5d593dc52
spec:
  replicas: 2
  selector:
    matchLabels:
      app: idcat-noa-re
  template:
    metadata:
      labels:
        app: idcat-noa-re
      annotations:
        checksum/config: 83db70c705fc631d751746b30a7d18dd2cc8cc0a4a6f725afcdd3a85073c1287
    spec:
      containers:
      - name: idcat-noa-re
        image: repo.noa.re/idcat:0.2.1-9b94cec7
        args:
        - --debug
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
        volumeMounts:
        - name: idcat-noa-re-config
          mountPath: /config
        - name: app-keys
          mountPath: /app-keys
        - name: tokens
          mountPath: /var/run/secrets/tokens
          readOnly: true
      volumes:
      - name: idcat-noa-re-config
        configMap:
          name: idcat-noa-re-config
      - name: app-keys
        secret:
          secretName: app-keys
      - name: tokens
        projected:
          sources:
          - serviceAccountToken:
              path: nats
              expirationSeconds: 3600
              audience: nats
